# groksito-discord-bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GROK_OAUTH.md  LICENSE  README.md  RELEASE.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-web.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
data/: .gitkeep
docs/: mcp-integration.md
docs/reference/mcp-tool-schemas/: README.md
docs/reference/mcp-tool-schemas/MCP_DOCKER/tools/: code-mode.json  mcp-activate-profile.json  mcp-add.json  mcp-config-set.json  mcp-create-profile.json  mcp-exec.json  mcp-find.json  mcp-remove.json
docs/reference/mcp-tool-schemas/cloudflare-api/tools/: execute.json  search.json
docs/superpowers/plans/: 2026-06-17-llm-orchestration-prompt-refactor.md  2026-06-20-support-all-file-types-vision-context.md
docs/superpowers/specs/: 2026-06-20-support-all-file-types-vision-context-design.md
scripts/: check.py  clean_tools_remnants.py  configure_env.py  extract_changelog.py  verify_chunk1_sandbox.py
src/groksito_discord/: __init__.py  __main__.py  bot.py  client.py  config.py  conversation.py  emoji_registry.py  env_utils.py  grok_oauth.py  health.py  image_delivery.py  image_editing.py  image_generation.py  intents.py  llm.py  llm_input.py  llm_utils.py  main.py  media_tools.py  prompt.py  response_safety.py  sandbox.py  skill_tools.py  token_usage.py  tools.py  video_generation.py
src/groksito_discord/config/: __init__.py  settings.py
src/groksito_discord/context/: __init__.py  context_summarizer.py  core.py
src/groksito_discord/core/: __init__.py  conversation.py  discord_assets.py  grok_oauth.py  health.py  intent.py  safety.py
src/groksito_discord/discord/: __init__.py  client.py
src/groksito_discord/discord/integrations/: __init__.py  gamemeca.py  steam.py  thelog.py  twitch.py
src/groksito_discord/llm/: __init__.py  client.py  llm_input.py  llm_utils.py  media_tools.py  prompt_builder.py  skill_tools.py  tools.py
src/groksito_discord/media/: __init__.py  audio_handler.py  delivery.py  editor.py  generator.py  image_handler.py  video_generation.py  video_handler.py
src/groksito_discord/skills/: README.md  __init__.py  decision.py  skill_executor.py  skill_proposer.py  skill_registry.py
src/groksito_discord/utils/: __init__.py  correlation.py  emoji_registry.py  env_utils.py  errors.py  message_utils.py  text.py  token_usage.py
tests/: __init__.py  conftest.py  test_activation_policy.py  test_artifact_cleanup.py  test_audio_speech_tags.py  test_changelog_extraction.py  test_classification.py  test_config_safety.py  test_context_no_user_memory.py  test_direct_delivery.py  test_discord_assets.py  test_docs_accuracy.py  test_error_observability.py  test_ghcr_release.py  test_guidance_centralization.py  test_health.py  test_image_edit_intent.py  test_legacy_cleanup.py  test_media_delivery.py  test_media_referent_activation.py  test_media_shim_cleanup.py  test_message_utils.py  test_modernization_verification.py  test_native_search_offering.py  test_packaging.py  test_pure_video_intent.py  test_quota.py  test_reply_chain_context.py  test_response_quality.py  test_sandbox.py  test_setup_list_fix.py  test_skills.py  test_steam_game_data.py  test_steam_resolution.py  test_tool_selection.py  test_twitch_integration.py  test_versus_embeds.py  test_video_aspect_ratio.py  test_video_intent.py  test_video_polling.py
tmp/: grok-ticket7-impl-summary.md  grok-ticket9-impl-summary.md  implement-ticket-plan-9.md
web/: README.md  main.py
web/templates/: base.html  capabilities.html  config.html  dashboard.html  guilds.html  skill_detail.html  skills.html  stats.html  usage.html
