[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "groksito-discord-bot"
version = "0.1.0"
description = "Standalone Groksito Discord Bot (extracted from pantsu-connector)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
  {name = "Pantsu Team"}
]
dependencies = [
    "discord.py>=2.7.0,<3.0",  # Targeting recent discord.py for full voice message support + modern features (Components V2, better flags, etc.)
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.4.0",
    "pydub>=0.25.1",
    "structlog>=24.4.0",
    "rich>=13.7.0",
    # Web dashboard dependencies (for the independent web/ FastAPI app)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
groksito = "groksito_discord.bot:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
