[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "groksito-discord-bot"
version = "0.1.0"
description = "Standalone Groksito Discord Bot (extracted from pantsu-connector)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
  {name = "Pantsu Team"}
]
dependencies = [
    "discord.py>=2.7.0,<3.0",  # Targeting recent discord.py for full voice message support + modern features (Components V2, better flags, etc.)
    "httpx>=0.27.0",
    "rapidfuzz>=3.0.0",
    "openai>=1.30.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.4.0",
    "pydub>=0.25.1",
    "structlog>=24.4.0",
    "rich>=13.7.0",
    # Web dashboard dependencies (for the independent web/ FastAPI app)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
groksito = "groksito_discord.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests", "web"]

[tool.ruff.lint]
# Focus on real bugs; defer style-only cleanup (line length, unused imports) to follow-ups.
select = ["E4", "E7", "E9", "F"]
ignore = [
    "E402",  # module-level import not at top (tests, lazy imports)
    "F401",  # unused imports (risky auto-fix can break re-exports)
    "F403",  # star re-export in context/__init__.py is intentional
    "F811",  # duplicate definitions (pre-existing in tools.py, web/main.py)
    "F841",  # unused variables (pre-existing tech debt)
    "E741",  # ambiguous names in interactive setup.py prompts
]
