[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "groksito-discord-bot"
version = "0.2.0"
description = "Standalone Groksito Discord Bot (extracted from pantsu-connector)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  {name = "Pantsu Team"}
]
keywords = ["discord", "bot", "grok", "xai", "ai", "llm", "chat"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Communications :: Chat",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Framework :: AsyncIO",
]

dependencies = [
    "discord.py>=2.7.0,<3.0",  # Targeting recent discord.py for full voice message support + modern features (Components V2, better flags, etc.)
    "httpx>=0.27.0",
    "rapidfuzz>=3.0.0",
    "openai>=1.30.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.4.0",
    "pydub>=0.25.1",
    "structlog>=24.4.0",
    "rich>=13.7.0",
    # Web dashboard dependencies (for the independent web/ FastAPI app)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
    "python-multipart",
]

[project.urls]
Homepage = "https://github.com/lupintic/groksito-discord-bot"
Repository = "https://github.com/lupintic/groksito-discord-bot"
Issues = "https://github.com/lupintic/groksito-discord-bot/issues"
Documentation = "https://github.com/lupintic/groksito-discord-bot#readme"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
groksito = "groksito_discord.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
